fix z-index and background color of navbar component

--- a/front-end/src/components/GridProduct/GridProduct.module.css
+++ b/front-end/src/components/GridProduct/GridProduct.module.css
@@ -2,7 +2,7 @@
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 420px);
+    grid-template-rows: repeat(1, 420px);
     padding: 10px;
   }
   
